--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,10 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -34,7 +38,12 @@ dependencies {
     }
     implementation 'com.miguelcatalan:materialsearchview:1.4.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.github.kittinunf.fuel:fuel:1.10.0'
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.10.0'
+    implementation 'com.github.kittinunf.fuel:fuel-gson:1.10.0'
+    implementation 'commons-lang:commons-lang:2.6'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
+
