added splash screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,22 @@
         android:roundIcon="@drawable/ic_launcher_doki"
         android:theme="@style/MaterialDrawerTheme">
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.main.SplashActivity"
             android:configChanges="orientation"
             android:screenOrientation="sensorPortrait"
-            android:label="@string/title_activity_main"
-            android:theme="@style/MaterialDrawerTheme.TranslucentStatus">
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="sensorPortrait"
+            android:label="@string/title_activity_main"
+            android:theme="@style/MaterialDrawerTheme.TranslucentStatus">
         </activity>
     </application>
 
