--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 *.iml
-.gradle
 /local.properties
 /.idea/libraries
 /.idea/modules.xml
@@ -8,3 +7,6 @@
 /build
 /captures
 .externalNativeBuild
+.idea/
+.gradle/
+gradle/
